Created start and next button

--- a/index.html
+++ b/index.html
@@ -4,8 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Coding Quiz</title>
+    <link rel='stylesheet' href='style.css' />
+    <script rel='script' src='script.js'></script>
 </head>
 <body>
-    
+    <class class='continer'>
+        <div id='questions' class='hide'></div>
+        <div class='controls'>
+            <button>Start</button>
+            <button>Next</button>
+        </div>
+    </class>
 </body>
 </html>
