Added header and paragraph

--- a/index.html
+++ b/index.html
@@ -1,19 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Coding Quiz</title>
-    <link rel='stylesheet' href='style.css' />
-    <script rel='script' src='script.js'></script>
-</head>
-<body>
-    <class class='continer'>
-        <div id='questions' class='hide'></div>
-        <div class='controls'>
-            <button>Start</button>
-            <button>Next</button>
-        </div>
+    <link rel="stylesheet" href="style.css" />
+    <script rel="script" src="script.js"></script>
+  </head>
+  <body>
+    <div class="wrapper">
+      <div id="start-page" class="start"></div>
+      <h1>Coding Quiz</h1>
+      <p>
+        Answer all the questions about coding. You have 60 seconds. Each wrong
+        answer deducts your time by 10 seconds. Your score is the time you have
+        left. Good luck!
+      </p>
+    </div>
+
+    <class class="continer">
+      <div id="questions" class="hide"></div>
+      <div class="controls">
+        <button>Start</button>
+        <button>Next</button>
+      </div>
     </class>
-</body>
+  </body>
 </html>
