--- a/index.html
+++ b/index.html
@@ -16,15 +16,15 @@
         left. Good luck!
       </p>
     </div>
-
+    <br>
     <class class="continer">
       <div id="questionContainer" class="hide">
         <div id="questions">Question</div>
         <div id="answerBtn" class="buttonGrid">
-          <button class="btn">Answer 1</button>
-          <button class="btn">Answer 2</button>
-          <button class="btn">Answer 3</button>
-          <button class="btn">Answer 4</button>
+          <button class="button">Answer 1</button>
+          <button class="button">Answer 2</button>
+          <button class="button">Answer 3</button>
+          <button class="button">Answer 4</button>
         </div>
       </div>
       <div class="controls">
