Updated start button, created questions

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
         <button id="nextBtn" class="nextBtn btn hide">Next</button>
       </div>
     </class>
-    <script rel="script" src="script.js"></script>
+    <script src="script.js"></script>
+    <script src="questions.js"></script>
   </body>
 </html>
