--- a/index.html
+++ b/index.html
@@ -7,18 +7,22 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <!-- Homepage -->
     <div class="wrapper">
       <div id="start-page" class="start hide"></div>
       <h1>Coding Quiz</h1>
       <p>
-        Answer all the questions about coding. You have 60 seconds. Each wrong
-        answer deducts your time by 10 seconds. Your score is the time you have
+        Answer all the questions about coding. You have 60 seconds. Your score is the time you have
         left. Good luck!
       </p>
-      <span id='countdown'>60</span> second<span id='plural'>s</span>
 
+      <!-- Countdown Timer-->
+      <span id="countdown">60</span> second<span id="plural">s</span>
+
+      <!-- Start Button -->
       <div class="controls">
         <button id="startBtn" class="startBtn btn">Start</button>
+        <element onclick='script.js'></element>
       </div>
 
       <div id="questions" class="hide">
@@ -26,6 +30,7 @@
         <div id="choices" class="choices"></div>
       </div>
 
+      <!-- Endpage -->
       <div id="end" class="hide">
         <h3>Your score is <span id="finalScore"></span></h3>
         <p>
