Updated timer and end page

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       </p>
 
       <!-- Countdown Timer-->
-      <span id="countdown">60</span> second<span id="plural">s</span>
+      <div id="countdown">60 seconds</div>
 
       <!-- Start Button -->
       <div class="controls">
